<resources>
    <string name="app_name">Events</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="continue_with_email_button_text">Continue with Email</string>
    <string name="google">Google</string>
    <string name="google_icon">GoogleIcon</string>
    <string name="terms_of_use_and_privacy_policy">By continuing, you agree to Terms of Use and Privacy Policy</string>
    <string name="welcome_in">Welcome in</string>
    <string name="eEvents">eEvents</string>
    <string name="continue_text">Continue</string>
    <string name="email_text">Open email app</string>
    <string name="our_functions">Our functions</string>
    <string name="title_activity_test">TEST</string>
    <string name="title_activity_login_fragment">LoginFragment</string>
    <string name="welcome_fragment">WelcomeFragment</string>
    <string name="our_functions_fragment">OurFunctionsFragment</string>
    <string name="events_logo">EventsLogo</string>
    <string name="email_icon">EmailIcon</string>
    <string name="buttonback">ButtonBack</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="check_email">Check your email</string>
    <string name="third_fuction_icon">ThirdFuctionIcon</string>
    <string name="email_check_spam_code">If you have not yet received an email\n with a confirmation code, please check\n your Promotions folder and spam folder</string>
    <string name="email_check_spam_link">If you have not yet received an email\n with a confirmation link, please check\n your Promotions folder and spam folder</string>
    <string name="click_to_resend"><u>Click to resend</u></string>
    <string name="oooops">Oooops!</string>
    <string name="something_s_wrong_please_give_it_one_more_try">Something’s wrong. Please, give it\n one more try.</string>
    <string name="try_again">Try again</string>
    <string name="you_re_welcome">You’re Welcome</string>
    <string name="congratulations_you_are_authorized">Congratulations, you have been\n authorized</string>
    <string name="get_started">Get started</string>
    <string name="internet_error_icon">InternetErrorIcon</string>
    <string name="no_internet">No Internet</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No internet connection. Please try again later.</string>
    <string name="button_back_image">ButtonBackImage</string>
    <string name="check_the_correctness_of_the_email">Check the correctness of the email</string>
    <string name="_60">60</string>
    <string name="main_menu_fragment">MainMenuFragment</string>
    <string name="heart_icon">HeartIcon</string>
    <string name="notification_icon">NotificationIcon</string>
    <string name="all_events">All events</string>
    <string name="your_events">Your events</string>
    <string name="profile_image">ProfileImage</string>
    <string name="example_name">example</string>
    <string name="example_username">"@example"</string>
    <string name="edit_profile">Edit profile</string>
    <string name="general">General</string>
    <string name="change_email">Change email</string>
    <string name="arrow_icon">ArrowIcon</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="faq">FAQ</string>
    <string name="account">Account</string>
    <string name="log_out">Log out</string>
    <string name="delete_icon">DeleteIcon</string>
    <string name="delete_account">Delete account</string>
    <string name="all_events_fragment">AllEventsFragment</string>
    <string name="filter_fragment">FilterFragment</string>
    <string name="find_events">Find events</string>
    <string name="filter_button">FilterButton</string>
    <string name="filter">Filter</string>
    <string name="reset_all">Reset All</string>
    <string name="set_the_date">Set the date*</string>
    <string name="category">Category</string>
    <string name="view_all">View All</string>
    <string name="apply">Apply</string>
    <string name="find_categories">Find categories</string>
    <string name="my_created_events">My created events</string>
    <string name="location">Location</string>
    <string name="location_fragment">LocationFragment</string>
    <string name="reset">Reset</string>
    <string name="event_create">Event create</string>
    <string name="create_event_fragment">CreateEventFragment</string>
    <string name="step_1_7">Step 1/7</string>
    <string name="title">Title</string>
    <string name="name_of_the_event">Name of the event</string>
    <string name="description">Description</string>
    <string name="description...">Description…</string>
    <string name="edit_profile_icon">Edit Profile Icon</string>
    <string name="change_email_icon">Change Email Icon</string>
    <string name="my_events">My events</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="settings">Settings</string>
    <string name="log_out_icon">Log Out Icon</string>
    <string name="profile_fragment">ProfileFragment</string>
    <string name="edit_profile_fragment">EditProfileFragment</string>
    <string name="your_nickname">Your nickname</string>
    <string name="display_name">Display name</string>
    <string name="remove_avatar">Remove avatar</string>
    <string name="change_avatar">Change avatar</string>
    <string name="upload_an_image_in_png_or_jpg_format_up_to_8_mb_nin_size_and_with_a_resolution_of_at_least_128x128">Upload an image in PNG or JPG format up to 8 MB\nin size and with a resolution of at least 128x128.</string>
    <string name="user_not_found">User not found</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="or">or</string>
    <string name="x_icon">XIcon</string>
    <string name="facebook_icon">FacebookIcon</string>
    <string name="recently_posted">Recently posted</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="saymycodeicon">SayMyCodeIcon</string>
    <string name="you_received_a_code">You received a code</string>
    <string name="please_enter_the_6_digit_code_we_sent_to_your_email">Please enter the 6-digit code we\n sent to your email</string>
    <string name="confirm">Confirm</string>
    <string name="create_event_button">Create event button</string>
    <string name="search">Search</string>
    <string name="add_social_media">Add social media</string>
    <string name="add_social_media_icon">Add Social Media Icon</string>
    <string name="my_events_icon">My Events Icon</string>
    <string name="delete_account_icon">Delete Account Icon</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="delete_account_dialog_message">Are you sure you want to delete your account? This will permanently remove all your data</string>
    <string name="warning_icon">Warning Icon</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="upload_profile_image_button">Upload Profile Image Button</string>
    <string name="image_overflow_menu">ImageOverflowMenu</string>
    <string name="button_overflow_menu">ButtonOverflowMenu</string>
    <string name="formatted_username">"@%1$s</string>
    <string name="edit_name_fragment">EditNameFragment</string>
    <string name="edit_username_fragment">EditUsernameFragment</string>
    <string name="image_checkmark">ImageCheckmark</string>
    <string name="button_checkmark">ButtonCheckmark</string>
    <string name="name_requirements">Latin letters, numbers, and superscripts (_) are allowed. The minimum length is 5 characters.</string>
    <string name="set_name">Set name</string>
    <string name="set_username">Set username</string>
    <string name="available">available</string>
    <string name="not_available">not available</string>
    <string name="image_favorite">ImageFavorite</string>
    <string name="add_social_media_fragment">AddSocialMediaFragment</string>
    <string name="change_email_fragment">ChangeEmailFragment</string>
    <string name="this_is_the_email_address_you_currently_use">This is the email address you currently use</string>
    <string name="enter_your_new_email_address">Enter your new email address</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_have_successfully_changed_your_email_address">You have successfully changed\n your email address</string>
    <string name="change_email_success_fragment">ChangeEmailSuccessFragment</string>
    <string name="check_your_new_email_fragment">CheckYourNewEmailFragment</string>
    <string name="social_media_icon">SocialMediaIcon</string>
    <string name="telegram_com">https://t.me/username</string>
    <string name="instagram_com">https://www.instagram.com/username</string>
    <string name="create_event">Create event</string>
    <string name="_0_100">0/100</string>
    <string name="_0_500">0/500</string>
    <string name="char_counter_format">%1$d/%2$d</string>
    <string name="click_to_choose_the_image_files">Click to choose the image files</string>
    <string name="max_size_10mb">Max size: 10MB</string>
    <string name="remove_all_image_files">Remove all image files</string>
    <string name="image_icon">ImageIcon</string>
    <string name="image_example">Image example</string>
    <string name="png_100_kb">PNG | 100 kB</string>
    <string name="image_info_format">%s</string>
    <string name="icon_upload">IconUpload</string>
    <string name="max_size_label">Max size:\u0020</string>
    <string name="max_size_value">10MB</string>
    <string name="icon_info">IconInfo</string>
    <string name="tags">Tags</string>
    <string name="enter_date_and_time">Enter date and time</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="not_necessary">Not necessary*</string>
    <string name="tags_fragment">TagsFragment</string>
    <string name="date">Date</string>
    <string name="am_label">AM</string>
    <string name="pm_label">PM</string>
    <string name="hour_label">Hour</string>
    <string name="minute_label">Minute</string>
    <string name="colon_symbol">:</string>
    <string name="_00">00</string>
    <string name="_01">01</string>
    <string name="_08">08</string>
    <string name="add_tags">Add tags</string>
    <string name="proposals">Proposals</string>
    <string name="favorites">Favorites</string>
    <string name="write_your_event_proposal">Write your event proposal…</string>
    <string name="home_fragment">HomeFragment</string>
    <string name="proposals_fragment">ProposalsFragment</string>
    <string name="create_proposal_fragment">CreateProposalFragment</string>
    <string name="new_proposal">New proposal</string>
    <string name="button_close">ButtonClose</string>
    <string name="publish_proposal">Publish proposal</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="_1_min">1m</string>
    <string name="_0">0</string>
    <string name="button_more">ButtonMore</string>
    <string name="permission_denied">Permission denied</string>
    <string name="location_not_available">Location not available</string>
    <string name="telegram">Telegram</string>
    <string name="instagram">Instagram</string>
    <string name="title_example_text">Hello! Is anyone from Ivano -Frankivsk?</string>
    <string name="text_content_example_text">Hello! Is anyone from Ivano-Frankivsk? I love movies and discussing interesting films. I\'m looking for friends to go to premieres or just to exchange ideas. Write, I\'ll be glad to meet you!</string>
</resources>