<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_bottom">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/img_profile_placeholder"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.133" />

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fixel_semibold"
        android:gravity="center|start"
        android:text="@string/example_name"
        android:textColor="@color/neutral_50"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/image_profile" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/fixel_medium"
        android:gravity="center|start"
        android:text="@string/_1_min"
        android:textSize="16sp"
        android:textColor="@color/neutral_60"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@id/image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/text_user_name"
        app:layout_constraintTop_toTopOf="@id/image_profile"
        app:layout_constraintWidth_percent="0.12" />

    <ImageButton
        android:id="@+id/button_more"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_more"
        android:src="@drawable/ic_more"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/text_content"
        app:layout_constraintTop_toTopOf="@id/image_profile"
        app:layout_constraintWidth_percent="0.067" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/fixel_semibold"
        android:gravity="top|start"
        android:lineSpacingMultiplier="1.4"
        android:maxLines="2"
        android:text="@string/title_example_text"
        android:textColor="@color/neutral_0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile"
        app:layout_constraintWidth_percent="0.911" />

    <TextView
        android:id="@+id/text_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/fixel_regular"
        android:gravity="top|start"
        android:lineSpacingMultiplier="1.4"
        android:maxLines="4"
        android:text="@string/text_content_example_text"
        android:textColor="@color/neutral_0"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintWidth_percent="0.911" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.256"
        app:layout_constraintHorizontal_bias="0.058">

        <ImageView
            android:id="@+id/image_like"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/like"
            android:src="@drawable/ic_heart_outline"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.261" />

        <TextView
            android:id="@+id/text_likes_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:fontFamily="@font/fixel_medium"
            android:text="@string/_0"
            android:textColor="@color/neutral_50"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintBottom_toBottomOf="@id/image_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/image_like" />

        <ImageButton
            android:id="@+id/button_share"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_send"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@id/image_like"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/text_likes_count"
            app:layout_constraintTop_toTopOf="@id/image_like"
            app:layout_constraintWidth_percent="0.261" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.304" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>