<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral_100"
    tools:context=".ui.fragments.ProposalDetailFragment">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_toolbar_button"
        android:contentDescription="@string/buttonback"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.133" />

    <ImageView
        android:id="@+id/button_back_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:contentDescription="@string/button_back_image"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/button_back"
        app:layout_constraintDimensionRatio="0.5:1"
        app:layout_constraintEnd_toEndOf="@id/button_back"
        app:layout_constraintStart_toStartOf="@id/button_back"
        app:layout_constraintTop_toTopOf="@id/button_back" />

    <ImageButton
        android:id="@+id/button_overflow_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_toolbar_button"
        android:contentDescription="@string/button_overflow_menu"
        app:layout_constraintBottom_toBottomOf="@+id/guideline1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.133"/>

    <ImageView
        android:id="@+id/image_overflow_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_overflow_menu"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_overflow_menu"
        app:layout_constraintBottom_toBottomOf="@id/button_overflow_menu"
        app:layout_constraintDimensionRatio="0.5:1"
        app:layout_constraintEnd_toEndOf="@id/button_overflow_menu"
        app:layout_constraintStart_toStartOf="@id/button_overflow_menu"
        app:layout_constraintTop_toTopOf="@id/button_overflow_menu" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/img_profile_placeholder"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        app:layout_constraintWidth_percent="0.133" />

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fixel_semibold"
        android:gravity="center|start"
        android:text="@string/example_name"
        android:textColor="@color/neutral_50"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/image_profile" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:autoSizeMaxTextSize="1000dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/fixel_medium"
        android:gravity="center|start"
        android:text="@string/_1_min"
        android:textColor="@color/neutral_60"
        app:layout_constraintBottom_toBottomOf="@id/image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/text_user_name"
        app:layout_constraintTop_toTopOf="@id/image_profile"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintHeight_percent="0.027" />

    <TextView
        android:id="@+id/text_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fixel_regular"
        android:gravity="top|start"
        android:lineSpacingMultiplier="1.4"
        android:textColor="@color/neutral_0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile"
        app:layout_constraintWidth_percent="0.911" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_content"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHeight_percent="0.033"
        app:layout_constraintWidth_percent="0.911">

        <ImageView
            android:id="@+id/image_like"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/like"
            android:src="@drawable/ic_heart_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.073" />

        <TextView
            android:id="@+id/text_likes_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fixel_medium"
            android:gravity="center|start"
            android:text="@string/_0"
            android:textColor="@color/neutral_50"
            app:layout_constraintBottom_toBottomOf="@id/image_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="@id/image_like" />

        <ImageButton
            android:id="@+id/button_share"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_send"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@id/image_like"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.197"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_like"
            app:layout_constraintWidth_percent="0.073" />

        <ImageButton
            android:id="@+id/button_telegram"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/telegram"
            android:src="@drawable/ic_telegram"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@id/image_like"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.868"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_like"
            app:layout_constraintWidth_percent="0.073" />

        <ImageButton
            android:id="@+id/button_instagram"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/instagram"
            android:src="@drawable/ic_instagram"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@id/image_like"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_like"
            app:layout_constraintWidth_percent="0.073" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.085" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.066" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>