<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog_rounded">

    <ImageView
        android:id="@+id/image_warning"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/warning_icon"
        android:src="@drawable/ic_warning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        app:layout_constraintWidth_percent="0.128" />

    <TextView
        android:id="@+id/text_dialog_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="1000dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/fixel_semibold"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/delete_account"
        android:textColor="@color/red_50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305"
        app:layout_constraintWidth_percent="0.471" />

    <TextView
        android:id="@+id/text_dialog_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="1000dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/fixel_regular"
        android:gravity="center"
        android:lineSpacingMultiplier="1.4"
        android:maxLines="3"
        android:text="@string/delete_account_dialog_message"
        android:textColor="@color/neutral_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562"
        app:layout_constraintWidth_percent="0.872"
        app:layout_constraintHeight_percent="0.230" />

    <Button
        android:id="@+id/button_cancel"
        style="@style/DeleteDialogButtonCancel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.153"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891"
        app:layout_constraintWidth_percent="0.397" />

    <Button
        android:id="@+id/button_submit"
        style="@style/DeleteDialogButtonSubmit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.153"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toEndOf="@id/button_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891"
        app:layout_constraintWidth_percent="0.397" />

</androidx.constraintlayout.widget.ConstraintLayout>